--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    #    url: jdbc:h2:mem:practice
-    url: jdbc:h2:tcp://localhost/~/test
+    url: jdbc:h2:mem:practice
+    #    url: jdbc:h2:tcp://localhost/~/test
     username: sa
     password:
 
