--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,14 @@ server:
   port: 8080
 
 spring:
+  h2:
+    console:
+      enabled: true
+
   datasource:
     driver-class-name: org.h2.Driver
-    #    url: jdbc:h2:mem:practice
-    url: jdbc:h2:tcp://localhost/~/test
+    url: jdbc:h2:mem:practice
+    #    url: jdbc:h2:tcp://localhost/~/test
     username: sa
     password:
 
@@ -19,18 +23,9 @@ spring:
         highlight_sql: true
         generate_statistics: true
 
-#  flyway:
-#    enabled: true
-#    baseline-on-migrate: true
-#    locations: classpath:/db/migration
-#    baseline-version: 1
 logging:
   level:
     org.springframework:
       messaging: trace
       web:
         socket: trace
-#    org.hibernate:
-#      SQL: debug
-#      type.descriptor.sql: trace
-
