--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:practice
-    #    url: jdbc:h2:tcp://localhost/~/test
+    #    jdbc:h2:tcp://localhost/~/Desktop/h2-2022-06-13/h2/bin/test
     username: sa
     password:
 
